// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a button with small prop correctly 1`] = `
.c1 {
  font-family: "Inter";
  font-style: normal;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 32px;
  border-radius: 4px;
  padding: 6px 12px;
  border-color: #5D2DEF;
  background-color: #5D2DEF;
  color: #FFFFFF;
  cursor: pointer;
}

<div>
  <button
    class="c0"
  >
    <span
      class="c1"
    />
  </button>
</div>
`;

exports[`Button renders a primary button unchanged 1`] = `
.c1 {
  font-family: "Inter";
  font-style: normal;
  font-weight: 600;
  font-size: 16px;
  line-height: 24px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 48px;
  border-radius: 4px;
  padding: 12px 24px;
  border-color: #5D2DEF;
  background-color: #5D2DEF;
  color: #FFFFFF;
  cursor: pointer;
}

<div>
  <button
    class="c0"
  >
    <span
      class="c1"
    />
  </button>
</div>
`;

exports[`Button renders a primary-ghost button unchanged 1`] = `
.c1 {
  font-family: "Inter";
  font-style: normal;
  font-weight: 600;
  font-size: 16px;
  line-height: 24px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 48px;
  border-radius: 4px;
  padding: 12px 0px;
  border-color: transparent;
  background-color: transparent;
  color: #5D2DEF;
  cursor: pointer;
}

<div>
  <button
    class="c0"
  >
    <span
      class="c1"
    />
  </button>
</div>
`;

exports[`Button renders a primary-outline button unchanged 1`] = `
.c1 {
  font-family: "Inter";
  font-style: normal;
  font-weight: 600;
  font-size: 16px;
  line-height: 24px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 48px;
  border-radius: 4px;
  padding: 12px 24px;
  border-color: #5D2DEF;
  background-color: #FFFFFF;
  color: #5D2DEF;
  cursor: pointer;
}

<div>
  <button
    class="c0"
  >
    <span
      class="c1"
    />
  </button>
</div>
`;

exports[`Button renders a secondary button unchanged 1`] = `
.c1 {
  font-family: "Inter";
  font-style: normal;
  font-weight: 600;
  font-size: 16px;
  line-height: 24px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 48px;
  border-radius: 4px;
  padding: 12px 24px;
  border-color: #FC6145;
  background-color: #FC6145;
  color: #FFFFFF;
  cursor: pointer;
}

<div>
  <button
    class="c0"
  >
    <span
      class="c1"
    />
  </button>
</div>
`;

exports[`Button renders a secondary-ghost button unchanged 1`] = `
.c1 {
  font-family: "Inter";
  font-style: normal;
  font-weight: 600;
  font-size: 16px;
  line-height: 24px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 48px;
  border-radius: 4px;
  padding: 12px 0px;
  border-color: transparent;
  background-color: transparent;
  color: #FC6145;
  cursor: pointer;
}

<div>
  <button
    class="c0"
  >
    <span
      class="c1"
    />
  </button>
</div>
`;

exports[`Button renders a secondary-outline button unchanged 1`] = `
.c1 {
  font-family: "Inter";
  font-style: normal;
  font-weight: 600;
  font-size: 16px;
  line-height: 24px;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  margin: 0;
  border: 2px solid;
  outline: none;
  max-height: 48px;
  border-radius: 4px;
  padding: 12px 24px;
  border-color: #FC6145;
  background-color: #FFFFFF;
  color: #FC6145;
  cursor: pointer;
}

<div>
  <button
    class="c0"
  >
    <span
      class="c1"
    />
  </button>
</div>
`;
